# dd-registry-cw

./: .gitignore  Cargo.toml  GITHUB_SETUP.md  LICENSE  README.md  deploy.sh  deployment-report-template.md  generate_schema.sh  project.config
.github/workflows/: ci.yml  release.yml
docs/: 01-结构化需求规格说明书.md  02-精确接口契约.md  03-架构与设计约束.md  04-非功能性需求量化指标.md  05-过程与决策记录.md  06-验证与质量保障.md  07-部署与运维.md
scripts/: deploy.sh  upload_to_github.sh
src/: contract.rs  error.rs  execute.rs  lib.rs  msg.rs  points.rs  query.rs  referral.rs  security.rs  state.rs  user.rs
tests/: integration.rs  unit.rs
