[package]
name = "dd-registry-cw"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://example.com/luckee/dd-registry-cw"
description = "Luckee decentralized decision registry (CosmWasm)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.5.4"
cw-storage-plus = "1.2.0"
cw2 = "1.1.2"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
hex = "0.4"
sha2 = "0.10"

[dev-dependencies]
cosmwasm-schema = "1.5.4"
